# mono-clip

./: .gitignore  MARKETING.md  README.md  TODO.md  architecture.md  index.html  package.json  pnpm-lock.yaml  requirements.md  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
cmd/monoes/: node.go  workflow.go
docs/superpowers/specs/: 2026-03-16-posts-comments-design.md  2026-03-18-tiktok-actions-design.md
internal/bot/tiktok/: actions.go  bot.go
internal/connections/: manager.go  oauth.go  oauth_test.go  registry.go  registry_test.go  storage.go  storage_test.go  validate.go
internal/nodes/service/: google_sheets.go  google_sheets_test.go
internal/workflow/schemas/: core.aggregate.json  core.code.json  core.merge.json  core.switch.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/clipboard/: detector.rs  image_store.rs  mod.rs  watcher.rs
src-tauri/src/commands/: clips.rs  folders.rs  mod.rs  settings.rs  utility.rs
src-tauri/src/db/: connection.rs  migrations.rs  models.rs  queries.rs
src-tauri/src/shortcuts/: manager.rs
src-tauri/src/tray/: setup.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/window/: manager.rs
src/lib/api/: tauri.ts
src/lib/components/: ClipCard.svelte  ClipGrid.svelte  EmptyState.svelte  FolderModal.svelte  HelpPanel.svelte  SearchBar.svelte  SettingsPanel.svelte  ShortcutRecorder.svelte  Sidebar.svelte  Toast.svelte
src/lib/stores/: clips.svelte.ts  folders.svelte.ts  settings.svelte.ts
src/lib/utils/: time.ts
wails-app/: app.go
wails-app/frontend/src/: App.jsx  index.css
wails-app/frontend/src/pages/: NodeRunner.jsx  PostDetail.jsx  Profile.jsx
wails-app/frontend/src/services/: api.js
