[package]
name = "monoclip"
version = "0.1.0"
description = "A blazing-fast macOS clipboard manager"
authors = ["MonoES"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "monoclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
regex = "1"
